# embtk-rotary-encoder

./: .travis.yml  Cargo.toml  README.md
ci/: install.sh
src/: lib.rs
