[package]
name = "embtk-rotary-encoder"
version = "0.1.0"
keywords = ["embedded", "no-std", "embedded-toolkit"]
categories = ["embedded", "no-std"]
authors = ["Ilya Epifanov <elijah.epifanov@gmail.com>"]
description = "Embedded Toolkit helpers for handling rotary encoder input"
license = "MIT OR Apache-2.0"
exclude = [".travis.yml", ".gitignore"]
repository = "https://github.com/ilya-epifanov/embtk-rotary-encoder"
edition = "2018"

[dependencies]
num-traits = { version = "0.2.0", default-features = false }
